--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
           go-version: 1.21
 
       - name: Run Go staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest && staticcheck ./...
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest && staticcheck ./src/MLWebApi/datamodel/datamodel.go
 
       - name: Install Python static analyzer
         run: pip install mypy
