--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,9 @@ jobs:
       - name: Run Go staticcheck
         run: go install honnef.co/go/tools/cmd/staticcheck@latest && find . -name "go.mod" -execdir staticcheck ./... \;
 
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+      
       - name: Install Python static analyzer
         run: pip install mypy
 
