--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,8 +31,7 @@ jobs:
           go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
 
       - name: Run Go linters
-        run: golangci-lint run ./...
-
+        run: golangci-lint run find . -name "go.mod" -execdir staticcheck ./... \;
       - name: Install Python linters
         run: pip install flake8
 
