--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,7 +84,7 @@ jobs:
           python-version: "3.11"
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r ./src/ModelApi/requirements.txt
 
       - name: Run Python unit tests
         run: pytest --disable-warnings
