--- a/src/ModelAPI/docker-compose.yml
+++ b/src/ModelAPI/docker-compose.yml
@@ -3,6 +3,18 @@ version: '3.8'
 services:
   app:
     build: .
+    image: myapp:latest
+    deploy:
+      replicas: 2
+
     ports:
-      - "8081:8081"
-    restart: unless-stopped
+      - "8081:8082"
+
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    ports:
+      - "80:80"
+    depends_on:
+      - app
