--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,24 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       
+      - name: Cache Go modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+      
       - name: Install Go
         uses: actions/setup-go@v4
         with:
           go-version: 1.21
+      
+      - name: Cache pip dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
       
       - name: Install Python
         uses: actions/setup-python@v5
@@ -31,7 +45,8 @@ jobs:
           go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
 
       - name: Run Go linters
-        run:  find . -name "go.mod" -execdir golangci-lint run ./... \;
+        run: find . -name "go.mod" -execdir golangci-lint run ./... \;
+
       - name: Install Python linters
         run: pip install flake8
 
@@ -45,13 +60,29 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Cache Go modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+
       - name: Install Go
         uses: actions/setup-go@v4
         with:
           go-version: 1.21
 
       - name: Run Go staticcheck
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest && find . -name "go.mod" -execdir staticcheck ./... \;
+        run: |
+          go install honnef.co/go/tools/cmd/staticcheck@latest
+          find . -name "go.mod" -execdir staticcheck ./... \;
+
+      - name: Cache pip dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('src/ModelAPI/requirements.txt') }}
 
       - name: Install torch
         run: pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118 
@@ -73,6 +104,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Cache Go modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+
       - name: Install Go
         uses: actions/setup-go@v4
         with:
@@ -80,6 +119,12 @@ jobs:
 
       - name: Run Go unit tests
         run: go test -v ./...
+
+      - name: Cache pip dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('src/ModelApi/requirements.txt') }}
 
       - name: Install Python
         uses: actions/setup-python@v5
@@ -109,6 +154,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Cache Go modules
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+
       - name: Install Go
         uses: actions/setup-go@v4
         with:
@@ -118,6 +171,12 @@ jobs:
         env:
           DATABASE_URL: postgres://testuser:testpass@localhost:5432/testdb
         run: go test -tags=integration -v ./...
+
+      - name: Cache pip dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('src/ModelAPI/requirements.txt') }}
 
       - name: Install Python
         uses: actions/setup-python@v5
@@ -150,7 +209,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Install dependencies
+      - name: Install dependencies and start services
         run: |
           docker-compose up -d
           sleep 10 # Даем время сервисам запуститься
